--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "4                     0                       4                      1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "(567291, 17)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "max              13756.000000                    1.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -628,13 +628,377 @@
        "(270866, 18)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>site_id</th>\n",
+       "      <th>ad_type_id</th>\n",
+       "      <th>geo_id</th>\n",
+       "      <th>device_category_id</th>\n",
+       "      <th>advertiser_id</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>line_item_type_id</th>\n",
+       "      <th>os_id</th>\n",
+       "      <th>integration_type_id</th>\n",
+       "      <th>monetization_channel_id</th>\n",
+       "      <th>ad_unit_id</th>\n",
+       "      <th>total_impressions</th>\n",
+       "      <th>total_revenue</th>\n",
+       "      <th>viewable_impressions</th>\n",
+       "      <th>measurable_impressions</th>\n",
+       "      <th>revenue_share_percent</th>\n",
+       "      <th>CPM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>2019-06-30 00:00:00</td>\n",
+       "      <td>351</td>\n",
+       "      <td>10</td>\n",
+       "      <td>187</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>140</td>\n",
+       "      <td>19</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5177</td>\n",
+       "      <td>168</td>\n",
+       "      <td>0.3704</td>\n",
+       "      <td>84</td>\n",
+       "      <td>168</td>\n",
+       "      <td>1</td>\n",
+       "      <td>220.476190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>2019-06-30 00:00:00</td>\n",
+       "      <td>351</td>\n",
+       "      <td>10</td>\n",
+       "      <td>187</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>140</td>\n",
+       "      <td>19</td>\n",
+       "      <td>55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5177</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.0958</td>\n",
+       "      <td>16</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "      <td>281.764706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>2019-06-30 00:00:00</td>\n",
+       "      <td>351</td>\n",
+       "      <td>10</td>\n",
+       "      <td>187</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>140</td>\n",
+       "      <td>19</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5177</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1765.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>2019-06-30 00:00:00</td>\n",
+       "      <td>351</td>\n",
+       "      <td>10</td>\n",
+       "      <td>187</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>140</td>\n",
+       "      <td>19</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5177</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0008</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>289</th>\n",
+       "      <td>2019-06-30 00:00:00</td>\n",
+       "      <td>351</td>\n",
+       "      <td>10</td>\n",
+       "      <td>173</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>140</td>\n",
+       "      <td>19</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5177</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0008</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567286</th>\n",
+       "      <td>2019-06-01 00:00:00</td>\n",
+       "      <td>350</td>\n",
+       "      <td>10</td>\n",
+       "      <td>187</td>\n",
+       "      <td>3</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3456</td>\n",
+       "      <td>20</td>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5168</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0254</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>211.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567287</th>\n",
+       "      <td>2019-06-01 00:00:00</td>\n",
+       "      <td>350</td>\n",
+       "      <td>10</td>\n",
+       "      <td>187</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3456</td>\n",
+       "      <td>20</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5168</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0.3400</td>\n",
+       "      <td>52</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>515.151515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567288</th>\n",
+       "      <td>2019-06-01 00:00:00</td>\n",
+       "      <td>350</td>\n",
+       "      <td>10</td>\n",
+       "      <td>158</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3456</td>\n",
+       "      <td>20</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5168</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0046</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>230.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567289</th>\n",
+       "      <td>2019-06-01 00:00:00</td>\n",
+       "      <td>350</td>\n",
+       "      <td>10</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3456</td>\n",
+       "      <td>20</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5168</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0120</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567290</th>\n",
+       "      <td>2019-06-01 00:00:00</td>\n",
+       "      <td>350</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>79</td>\n",
+       "      <td>3456</td>\n",
+       "      <td>20</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5168</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0240</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>200.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>270866 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       date  site_id  ad_type_id  geo_id  device_category_id  \\\n",
+       "285     2019-06-30 00:00:00      351          10     187                   3   \n",
+       "286     2019-06-30 00:00:00      351          10     187                   3   \n",
+       "287     2019-06-30 00:00:00      351          10     187                   2   \n",
+       "288     2019-06-30 00:00:00      351          10     187                   1   \n",
+       "289     2019-06-30 00:00:00      351          10     173                   3   \n",
+       "...                     ...      ...         ...     ...                 ...   \n",
+       "567286  2019-06-01 00:00:00      350          10     187                   3   \n",
+       "567287  2019-06-01 00:00:00      350          10     187                   1   \n",
+       "567288  2019-06-01 00:00:00      350          10     158                   1   \n",
+       "567289  2019-06-01 00:00:00      350          10      33                   1   \n",
+       "567290  2019-06-01 00:00:00      350          10      11                   1   \n",
+       "\n",
+       "        advertiser_id  order_id  line_item_type_id  os_id  \\\n",
+       "285                 8       140                 19     59   \n",
+       "286                 8       140                 19     55   \n",
+       "287                 8       140                 19     58   \n",
+       "288                 8       140                 19     56   \n",
+       "289                 8       140                 19     59   \n",
+       "...               ...       ...                ...    ...   \n",
+       "567286             79      3456                 20     59   \n",
+       "567287             79      3456                 20     56   \n",
+       "567288             79      3456                 20     56   \n",
+       "567289             79      3456                 20     56   \n",
+       "567290             79      3456                 20     56   \n",
+       "\n",
+       "        integration_type_id  monetization_channel_id  ad_unit_id  \\\n",
+       "285                       1                        4        5177   \n",
+       "286                       1                        4        5177   \n",
+       "287                       1                        4        5177   \n",
+       "288                       1                        4        5177   \n",
+       "289                       1                        4        5177   \n",
+       "...                     ...                      ...         ...   \n",
+       "567286                    1                       19        5168   \n",
+       "567287                    1                       19        5168   \n",
+       "567288                    1                       19        5168   \n",
+       "567289                    1                       19        5168   \n",
+       "567290                    1                       19        5168   \n",
+       "\n",
+       "        total_impressions  total_revenue  viewable_impressions  \\\n",
+       "285                   168         0.3704                    84   \n",
+       "286                    34         0.0958                    16   \n",
+       "287                     4         0.0706                     2   \n",
+       "288                     4         0.0008                     2   \n",
+       "289                     4         0.0008                     0   \n",
+       "...                   ...            ...                   ...   \n",
+       "567286                 12         0.0254                     4   \n",
+       "567287                 68         0.3400                    52   \n",
+       "567288                  2         0.0046                     0   \n",
+       "567289                  6         0.0120                     0   \n",
+       "567290                 12         0.0240                    12   \n",
+       "\n",
+       "        measurable_impressions  revenue_share_percent          CPM  \n",
+       "285                        168                      1   220.476190  \n",
+       "286                         34                      1   281.764706  \n",
+       "287                          4                      1  1765.000000  \n",
+       "288                          4                      1    20.000000  \n",
+       "289                          4                      1    20.000000  \n",
+       "...                        ...                    ...          ...  \n",
+       "567286                      12                      1   211.666667  \n",
+       "567287                      66                      1   515.151515  \n",
+       "567288                       2                      1   230.000000  \n",
+       "567289                       6                      1   200.000000  \n",
+       "567290                      12                      1   200.000000  \n",
+       "\n",
+       "[270866 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I think it could be useful to do some feature engineering here; the data we have does not give us that much \n",
+    "# without the right context imo \n",
+    "\n",
+    "df"
    ]
   },
   {
