Resolved merge conflict by taking Data_Exploration.ipynb from data_processing

--- a/Data_Exploration.ipynb
+++ b/Data_Exploration.ipynb
@@ -803,15 +803,40 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# just looking at this shows us that we need to deal with outliers\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# let's normalize total_impressions and total revenue which have extreme outliers according to our data exploration before\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "def normalize_values(df, cols):\n",
+    "    scaler = MinMaxScaler()\n",
+    "\n",
+    "    for col in cols:\n",
+    "        df[col] = scaler.fit_transform(df[col].values.reshape(-1, 1))\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "df = normalize_values(df, ['total_revenue', 'total_impressions','viewable_impressions', 'measurable_impressions'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's now export the dataset and start experimenting with models in a new file\n",
+    "\n",
+    "df.to_csv('c:/Users/kaczm/OneDrive/Dokumenty/cpm_prediction.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
